public/auth/css/style.css
*{
    margin: 0;
    padding: 0;
}

.auth-card {
    padding: 50px !important;
    border-radius: 5px !important;
    border: none !important;
    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
}
.auth-anker >a{
text-decoration: none;
}
.vertical-alignment {
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 100vh;
}
.table-card {
    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
    margin: 0px 10px;
}
   .toggel-buuton {
    visibility: hidden;
   }

   .dataTables_wrapper .dataTables_paginate .paginate_button {
    box-sizing: border-box;
    display: inline-block;
    min-width: 1.5em;
    margin-top: 0.5em;
    padding: 0em 0.5em !important;
    margin-left: 2px;
    text-align: center;
    text-decoration: none !important;
    cursor: pointer;
    cursor: hand;
    color: #333 !important;
    border: 1px solid transparent;
    border-radius: 2px;
}
@media only screen and (max-width: 600px) {
    .nav-mobile {
        list-style: none;
    }
    .toggel-buuton {
        visibility: visible;
       }
    .auth-card {
        width: 90% !important;
        padding: 50px !important;
        border-radius: 5px !important;
        border: none !important;
        box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
    }
  }

